fix : output box not aligned
Increased bottom padding to align output box

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
     margin: auto;
     font-size: larger;
     background-color: white;
-    margin-bottom: 6rem;
+    margin-bottom: 8rem;
     overflow: scroll;
 }
 
